@@ -804,6 +804,34 @@ var DimpCompose = {
         $('upload_wait').update(DimpCore.text.uploading + ' (' + $F(u).escapeHTML() + ')').show();
     },
 
+    uploadAttachmentAjax: function(dt, params, callback)
+    {
+        if (dt && dt.files) {
+            params = $H(params).update({
+                composeCache: $F(this.getCacheElt()),
+                json_return: 1
+            });
+            HordeCore.addRequestParams(params);
+
+            $R(0, dt.files.length - 1).each(function(n) {
+                var fd = new FormData();
+
+                params.merge({ file_upload: dt.files[n] }).each(function(p) {
+                    fd.append(p.key, p.value);
+                });
+
+                HordeCore.doAction('addAttachment', {}, {
+                    ajaxopts: {
+                        contentType: 'multipart/form-data',
+                        postBody: fd,
+                        requestHeaders: { "content-type": '' }
+                    },
+                    callback: callback
+                });
+            });
+        }
+    },
+
     toggleCC: function(type)
     {
         var t = $('toggle' + type),
@@ -1142,6 +1170,10 @@ var DimpCompose = {
         });
 
         if ($H(DimpCore.context.ctx_atc).size()) {
+            $('atctd').observe('drop', function(e) {
+                this.uploadAttachmentAjax(e.dataTransfer);
+                e.stop();
+            }.bindAsEventListener(this)).observe('dragover', Event.stop);
             DimpCore.addPopdown($('upload'), 'atc', {
                 no_offset: true
             });
