@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Allow attachments to be dragged/dropped from local filesystem on the dynamic compose page.
 * [mms] Hide browser generated file input widget for attachment upload in dynamic compose page.
 * [mms] Add attachment upload capability to smartmobile compose page.
 * [mms] Add HTML image/style blocking to smartmobile view.
