@@ -2,6 +2,8 @@
 v6.1.0-git
 ----------
 
+[mms] Allow attachments to be dragged/dropped from local filesystem on the
+      dynamic compose page.
 [mms] Hide browser generated file input widget for attachment upload in dynamic
       compose page.
 [mms] Add attachment upload capability to smartmobile compose page.
